<resources>
    <string name="app_name">Library</string>
    <string name="get_code">获取验证码</string>
    <string name="on_load">正在加载</string>
    <string name="cancel">取消</string>

    <string name="current_cache">当前缓存</string>
    <string name="click_to_clear">一键清除</string>
    <string name="clear_finish">清除完成</string>
    <string name="confirm">确认</string>
    <string name="complete">完成</string>

    <string name="verify_input_empty">输入内容不能为空</string>

    <!-- tip -->
    <string name="tip_token_expire">请先登录</string>
    <string name="tip_login_successful">登录成功</string>
    <string name="tip_register_successful">注册成功</string>
    <string name="tip_add_successful">加入成功</string>
    <string name="tip_save_successful">保存成功</string>
    <string name="tip_set_successful">设置成功</string>
    <string name="tip_modify_successful">修改成功</string>
    <string name="tip_delete_successful">删除成功</string>
    <string name="tip_password_change_and_login_now">密码已经修改，请重新登录</string>
    <string name="tip_no_more_data">已经没有更多了</string>

    <!-- 支付 -->
    <string name="pay_mode">支付方式</string>
    <string name="pay_weChat">微信支付</string>
    <string name="pay_ali">支付宝支付</string>
    <string name="pay_confirm">确认付款</string>
    <string name="pay_need">需付款</string>
</resources>
