<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/pay_mode"
            android:textColor="@color/textPrimary" />

        <TextView
            android:id="@+id/tv_pw_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:drawableRight="@mipmap/icon_comment_close"
            android:onClick="onClick"
            android:padding="10dp"
            android:paddingTop="4dp" />
    </RelativeLayout>


    <RadioGroup
        android:id="@+id/rg_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

        <View style="@style/Divider_Horizontal_Margin" />

        <RadioButton
            android:id="@+id/rb_balance"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableLeft="@mipmap/pay_balance"
            android:drawablePadding="12dp"
            android:drawableRight="@drawable/sel_rb_pay"
            android:gravity="start|center_vertical"
            android:padding="12dp"
            android:text="余额支付"
            android:textColor="@color/textPrimary" />

        <View
            style="@style/Divider_Horizontal_Margin"
            android:layout_marginTop="-0.5dp" />

        <RadioButton
            android:id="@+id/rb_wechat"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:button="@null"
            android:drawableLeft="@mipmap/pay_wechat"
            android:drawablePadding="12dp"
            android:drawableRight="@drawable/sel_rb_pay"
            android:gravity="start|center_vertical"
            android:padding="12dp"
            android:text="@string/pay_weChat"
            android:textColor="@color/textPrimary" />

        <View style="@style/Divider_Horizontal_Margin" />

        <RadioButton
            android:id="@+id/rb_ali"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:button="@null"
            android:drawableLeft="@mipmap/pay_ali"
            android:drawablePadding="12dp"
            android:drawableRight="@drawable/sel_rb_pay"
            android:gravity="start|center_vertical"
            android:padding="12dp"
            android:text="@string/pay_ali"
            android:textColor="@color/textPrimary" />

        <View style="@style/Divider_Horizontal_Margin" />


        <RadioButton
            android:id="@+id/rb_icon"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:button="@null"
            android:drawableLeft="@mipmap/pay_balance"
            android:drawablePadding="12dp"
            android:drawableRight="@drawable/sel_rb_pay"
            android:gravity="start|center_vertical"
            android:padding="12dp"
            android:checked="true"
            android:text="共享币支付"
            android:textColor="@color/textPrimary" />

        <View
            style="@style/Divider_Horizontal_Margin"
            android:layout_marginTop="-0.5dp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="6dp"
            android:paddingRight="3dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/pay_need"
                android:textColor="@color/textSecondary" />

            <TextView
                android:id="@+id/tv_pw_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textColor="@color/textPrimary"
                tools:text="￥99.00" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_pay_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/sel_btn_send"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/pay_confirm"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>